Fixed dark mode post title links

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -275,6 +275,10 @@ nav {
 	text-decoration: underline;
 }
 
+.dark a.post-title:hover {
+    text-decoration: none;
+}
+
 
 .light {
 	background-color: var(--text);
